finished home and team page

--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -18,3 +18,13 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+
+.avatar-big{
+  width: 100px;
+  border-radius: 100%;
+}
+
+.padded {
+  padding-top: 5em;
+  padding-bottom: 5em; }
+
